<resources>
    <string name="app_name">MyChatApp</string>
    <string name="usernameHint">Username</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="passwordConfirmHint">Re-enter Password</string>
    <string name="registerButton">REGISTER</string>
    <string name="goToLoginPage"><u>Already have an account? Login here!</u></string>
    <string name="goToRegisterPage"><u>Don\'t Have an account? Register here!</u></string>
    <string name="loginButton">LOGIN</string>
    <string name="selectImage">SELECT IMAGE</string>
</resources>
