<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/login_editText_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/ui_edit_text"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/emailHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/password_editText_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ui_edit_text"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordHint"
        app:layout_constraintEnd_toEndOf="@+id/login_editText_login"
        app:layout_constraintStart_toStartOf="@+id/login_editText_login"
        app:layout_constraintTop_toBottomOf="@+id/login_editText_login"
        android:autofillHints=""/>

    <Button
        android:id="@+id/loginButton_button_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/loginButton"
        android:background="@drawable/ui_buttons"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/password_editText_login"
        app:layout_constraintStart_toStartOf="@+id/password_editText_login"
        app:layout_constraintTop_toBottomOf="@+id/password_editText_login" />

    <TextView
        android:id="@+id/registerButton_textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/goToRegisterPage"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginButton_button_login"
        app:layout_constraintStart_toStartOf="@+id/loginButton_button_login"
        app:layout_constraintTop_toBottomOf="@+id/loginButton_button_login" />


</androidx.constraintlayout.widget.ConstraintLayout>